test/expected/explain_a_cd_i.out
explain [[carries_dependency]] int x
        ^
9: error: "carries_dependency" can only appear on functions or parameters
